16-Sep-2003 by Matthias Braun
-randomly fixed stuff in the very ugly libview code (also removed several unused
 files there)
-added a statechangedcallback to Choice and CheckBox components
-added the NoCopy class for cases where you want to forbid
 assignment and copy-construction
-Started save/loading capabilities for GameConfig
-added a resolution and fullscreen setting to the Visual Options

16-Sep-2003 by Ivo Danihelka
-Alt+Enter don't start chat now
-'d' display damage
-cleaning code with valgrind

15-Sep-2003 by Matthias Braun
-removed the GetConnectionTypeView menu. We're only using tcp/ip.
-made the Join view working again
-made lobbyview scrolling topdown
-made the app report connection errors

14-Sep-2003 by Ivo Danihelka
-converted sdlsound to use physfs, Mix_LoadMUS_RW is not used yet

14-Sep-2003 by Matthias Braun
-applied sound patch by Ivo Danihelka (thanks alot)
-added code to construct SDL_RWops in physfs files

12-Sep-2003 by Matthias Braun
-use the physfs for the colortable cache now
-removed lots of unused code from Surface class
-removed the screenshot function (this allowed to remove the BMP saver too).
 because there are external screenshot tools around.

11-Sep-2003 by Matthias Braun
-removed more win32 specific code
-removed #ifdef USE_SDLs, the code is enabled by default now
-added a new commandline parser
-smaller fixes/cleanups

10-Sep-2003 by Matthias Braun
-more random cleanups
-more cleanups so that the Stub directory is empty now
-fixed the bug where the TileEngine didn't correctly draw the last line
-removed the strange PObject class (still some utility classes which formerly
 dealt with PObject are there and are - as before - quiet useless). The long
  story:
  It seemed like PObject was planed as some generic base type which provided a
  uniform interface to functions like comparing 2 objects. But since the only
  function is_equal in PObject wasn't virtual, and since it was never used I
  decided that this stuff is quiet useless.