@@ -15,12 +15,8 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-
-/////////////////////////////////////////////////////////////////////////////
-// Includes.
-/////////////////////////////////////////////////////////////////////////////
-
 #include <config.h>
+
 #include "GameView.hpp"
 #include "Desktop.hpp"
 #include "TileEngine.hpp"
@@ -57,7 +53,6 @@ GameView::GameView() : View()
 void GameView::setSize(iXY size)
 {
     resize(size);
-
 } // end GameView::setSize
 
 // init
