@@ -15,8 +15,6 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-
-
 #ifndef __GameView_hpp__
 #define __GameView_hpp__
 
@@ -42,9 +40,7 @@ private:
     virtual void doDraw(const Surface &windowArea, const Surface &clientArea);
     //virtual void mouseEnter(const iXY &pos);
     virtual void mouseMove(const iXY & prevPos, const iXY &newPos);
-
-}
-; // end GameView
+}; // end GameView
 
 extern GameView gameView;
 
