@@ -47,13 +47,10 @@ extern iXY optionsPos;
 extern iXY helpPos;
 extern iXY creditsPos;
 extern iXY soundPos;
-extern iXY tcpipPos;
 extern iXY joinPos;
 extern iXY interfacePos;
-extern iXY directConnectPos;
 extern iXY hostPos;
 extern iXY visualsPos;
-extern iXY modemPos;
 extern iXY controlsPos;
 extern iXY returnToGamePos;
 extern iXY resignPos;
