@@ -15,9 +15,8 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-
-
 #include <config.h>
+
 #include "OptionsTemplateView.hpp"
 #include "Desktop.hpp"
 #include "DDHardSurface.hpp"
@@ -106,10 +105,12 @@ void OptionsTemplateView::initButtons()
 
     MenuTemplateView::initButtons();
 
+#if 0 // XXX
     // Sound.
     addSpecialButton(	soundPos,
                       "Sound",
                       bSound);
+#endif
 
     // Interface.
     addSpecialButton(	interfacePos,
@@ -121,10 +122,12 @@ void OptionsTemplateView::initButtons()
                       "Visuals",
                       bVisuals);
 
+#if 0 // XXX
     // Contols.
     addSpecialButton(	controlsPos,
                       "Controls",
                       bControls);
+#endif
 
 } // end OptionsTemplateView::initButtons
 
