@@ -10,16 +10,17 @@
 -ParticleInterface.cpp contains some DirectSound code which needs to be replaced
  - OK
 -GroundExplosionParticle, RadarPingParticle2D and DirtKickParticle2D seem to
- miss some Surface variables, where are these defined?
--PUFF_PARTICLE_TYPE isn't defined in SmokingTrajectoryParticle - Old code?
+ miss some Surface variables, where are these defined? - seems OK
+-PUFF_PARTICLE_TYPE isn't defined in SmokingTrajectoryParticle - Old code? -
+    yes, OK
 -write a new version of DDHardSurface - OK
 -network code probably needs a bigger rewrite since directplay is not available
- on unix.
+ on unix. - OK (for now)
 -look at all the directx code in GameManager.cpp - OK
 -need new mousecode in MouseInterface.cpp - OK
 -need new directplay code in NetworkClientDPlay.cpp, NetworkServerDPlay.cpp -
-  not needed, these files aren't used anymore
--need new code instead of winsock in NetworkClientWinsock.cpp - nearl OK
+  not needed, these files aren't used anymore - OK
+-need new code instead of winsock in NetworkClientWinsock.cpp - OK
 -rewrite all the windows specific code in NetPanzer/Core - OK (SDL specific
  code is in NetPanze/Core/unix now)
 -check if the functions and stuff in Lib/terminate.cpp is really needed (looks
@@ -28,4 +29,23 @@
 -Fix the win32 stuff in Lib/Util/UtilInterface.cpp - OK
 -rewrite win32 event loop to use a SDL event loop. Don't forget to pump mouse
  events to MouseInterface then. - OK
+
+Todo before beta release:
+-Fix the problems with mainmenu in >640x480 resolution
+-Eventually trim down option windows to only necessary stuff (this can wait
+    for after the release though)
+-Complete GameConfig::save and GameConfig::load functions
+-Test it (esp. with more than 2 players)
+-Make it compiling in mingw again.
+-Fix all warnings in the sourcecode
+-Add configure script (autoconf) which checks for all prerequesits
+-Create "make install" target (also a "make uninstall"?)
+-Write a README
+-Test it, esp. with more than 2 players and test a complete
+    getsource/configure/build/install/play cycle. We should be able to find
+    betatesters in irc channels like #netpanzer, #sdl, #*game* I assume ;-)
+-Create and upload source tarball
+-Announce on linux/opensource related sites (together with a call for new
+    artists, coders, and *good* game designers - we wanna improve the gameplay
+    too, don't we?)
 
